--- a/README.Rmd
+++ b/README.Rmd
@@ -23,6 +23,7 @@ library(data.table)
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/lkhenayfis/shapeshiftr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/lkhenayfis/shapeshiftr/actions/workflows/R-CMD-check.yaml)
 [![test-coverage](https://github.com/lkhenayfis/shapeshiftr/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/lkhenayfis/shapeshiftr/actions/workflows/test-coverage.yaml)
+[![codecov](https://codecov.io/gh/lkhenayfis/shapeshiftr/graph/badge.svg?token=JW6LQ7TO2U)](https://codecov.io/gh/lkhenayfis/shapeshiftr)
 <!-- badges: end -->
 
 Package `shapeshiftr` aims at providing a simple and efficient interface for manipulation and 
